--- a/basePresentar_AAA/nbproject/project.properties
+++ b/basePresentar_AAA/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=basepresentar_aaa.BasePresentar_AAA
+main.class=basepresentar_aaa.Servidor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
