--- a/basePresentar_AAA/nbproject/project.properties
+++ b/basePresentar_AAA/nbproject/project.properties
@@ -26,10 +26,12 @@ dist.jar=${dist.dir}/basePresentar_AAA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.sqljdbc4.jar=sqljdbc_3.0\\esn\\sqljdbc4.jar
+file.reference.sqljdbc4.jar-1=C:\\Users\\Anita\\Documents\\DOCUMENTOS\\UNIVERSIDAD\\SEMESTRES\\6. SEXTO\\SBD DISTRIBUIDOS\\Segundo Parcial\\SBDD_Proyecto\\SBDD_Proyecto\\sqljdbc_3.0\\esn\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.sqljdbc4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
