--- a/basePresentar_AAA/nbproject/project.properties
+++ b/basePresentar_AAA/nbproject/project.properties
@@ -30,8 +30,8 @@ file.reference.sqljdbc4.jar-1=C:\\Users\\Anita\\Documents\\DOCUMENTOS\\UNIVERSID
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.sqljdbc4.jar-1}
+    ${file.reference.sqljdbc4.jar-1}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
